manifests/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
spec:
  selector:
    app.kubernetes.io/name: docs
  ports:
    - name: http
      port: 8080
      targetPort: http
